presentations/borrowing/2.error
error[E0506]: cannot assign to `point.x` because it is borrowed
  --> 2_faulty.rs:11:5
   |
10 |     let re = &point; // -\ <1>
   |              ------ borrow of `point.x` occurs here
11 |     point.x = 2;     //  | <2>
   |     ^^^^^^^^^^^ assignment to borrowed `point.x` occurs here
12 |     inspect(re);     // -/ <3>
   |             -- borrow later used here

